Implement some wrappers for xashxt

--- a/GL/gl_entries.in
+++ b/GL/gl_entries.in
@@ -37,7 +37,7 @@
     GL_ENTRY(void,glClearColor,float red, float green, float blue, float alpha)
     GL_ENTRY(void,glClearColorx,int red, int green, int blue, int alpha)
     GL_ENTRY(void,glClearDepthf,float depth)
-    GL_ENTRY(void,glClearDepthx,int depth)
+	GL_ENTRY(void,glClearDepthx,int depth)
     GL_ENTRY(void,glClearStencil,int s)
     GL_ENTRY(void,glClientActiveTexture,unsigned int texture)
     GL_ENTRY(void,glColor4f,float red, float green, float blue, float alpha)
@@ -185,3 +185,14 @@
     GL_ENTRY(void,glOrtho,double left, double right, double bottom, double top, double zNear, double zFar)
     GL_ENTRY(void,glDepthRange,double zNear, double zFar)
 #endif
+
+// fbo
+GL_ENTRY(void, glGenFramebuffers, GLsizei n, GLuint* framebuffers)
+GL_ENTRY(void, glGenRenderbuffers, GLsizei n, GLuint* renderbuffers)
+GL_ENTRY(void, glRenderbufferStorage, GLenum target, GLenum internalformat, GLsizei width, GLsizei height)
+GL_ENTRY(void, glBindFramebuffer, GLenum target, GLuint framebuffer)
+GL_ENTRY(void, glBindRenderbuffer, GLenum target, GLuint renderbuffer)
+GL_ENTRY(void, glFramebufferTexture2D, GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level)
+GL_ENTRY(void, glDeleteRenderbuffers, GLsizei n, const GLuint* renderbuffers)
+GL_ENTRY(void, glDeleteFramebuffers, GLsizei n, const GLuint* framebuffers)
+GL_ENTRY(void, glFramebufferRenderbuffer, GLenum target, GLenum attachment, GLenum renderbuffertarget, GLuint renderbuffer)
